[gd_scene load_steps=11 format=2]

[ext_resource path="res://GUI/Buttons/QuitToDesktopButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/MainMenu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://GUI/Credits/GUICredits.tscn" type="PackedScene" id=3]

[sub_resource type="InputEventJoypadButton" id=1]
button_index = 11

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 67

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "ui_cancel"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("VersionLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -162.0
margin_top = 141.0
margin_right = 162.0
margin_bottom = -141.0
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 324.0
margin_bottom = 66.0
focus_neighbour_left = NodePath("../QuitToDesktopButton")
focus_neighbour_top = NodePath("../QuitToDesktopButton")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 2 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 324.0
margin_bottom = 192.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../QuitToDesktopButton")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 4 )
text = "CREDITS"

[node name="QuitToDesktopButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 252.0
margin_right = 324.0
margin_bottom = 318.0
focus_neighbour_top = NodePath("../CreditsButton")
focus_neighbour_bottom = NodePath("../PlayButton")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 6 )

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.5
margin_top = 40.0
margin_right = 82.5
margin_bottom = 14.0
text = "Terrible Mess in the Store"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.985975 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.5
margin_top = -52.0
margin_right = 82.5
margin_bottom = -38.0
text = "Version 0.1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/VersionLabelAlphaModulate = SubResource( 7 )

[node name="GUICredits" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="visibility_changed" from="." to="." method="_on_MainMenu_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="visibility_changed" from="GUICredits" to="." method="_on_GUICredits_visibility_changed"]
